Topic/bug fix 4 (#66)
* useSelfieDetection.jsx: fix composting operation that breaks on chrome

* LevelModal.jsx: add responsive width/height for reward image

--- a/web/src/styles/App.css
+++ b/web/src/styles/App.css
@@ -350,3 +350,13 @@ table#gestureDecision.table {
   max-height: 8rem;
   filter: drop-shadow(4px 4px 8px #666666);
 }
+
+/* Level Modal
+ * have reward image fill modal without expanding modal
+ * while keeping responsive (max-height vh)
+ */
+#level-modal img {
+  width: 100vw;
+  max-height: 66vh;
+  object-fit: cover;
+}
